# OptiSplat

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  demo.ipynb  example.py  example_scene.json  metrics.py  setup.py
include/: camera.h  common.h  load.h  render.h  utils.h  viewer.h
src/: camera.cc  common.cu  load.cc  main.cc  pybind.cc  render.cc  utils.cc  viewer.cc
src/diff-gaussian-rasterization/: CMakeLists.txt
src/diff-gaussian-rasterization/cuda_rasterizer/: forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
src/diff-gaussian-rasterization/cuda_rasterizer/flashgs/: ops.h  preprocess.cu  render.cu  sort.cu
src/diff-gaussian-rasterization/cuda_rasterizer/tcgs/: tcgs.h  tcgs_forward.cu
src/optisplat/: __init__.py
